src/objects/AMS_Process_Detail__c.object
<CustomObject>
    <fields>
        <fullName>AMS_IATAcode__c</fullName>
        <formula>Account__r.IATACode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IATA code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AMS_Process_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSCAR__c</fullName>
        <label>OSCAR</label>
        <referenceTo>AMS_OSCAR__c</referenceTo>
        <relationshipName>AMS_Process_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Hierarchy Account Selection</label>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>Hierarchy Account Selection</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hierarchy Account Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>